tests/error_display/hll_diagnostics_sub.si
# Rendered output of pre-elaboration SUB-* diagnostics: substructural
# violations caught by the MIR substructural checker before elaboration
# runs. These errors suppress all post-elaboration lifetime and leak checks.
#
# | fn               | DiagCode          |
# |------------------|-------------------|
# | copy_of_non_copy | SUB-CopyOfNonCopy |

# ---------- SUB-CopyOfNonCopy: implicit copy of a non-Copy type ----------

# `&mut i64` is not Copy, so each bare use of `r` attempts an implicit
# copy and is rejected by the substructural checker.
fn copy_of_non_copy(r: &mut i64) {
    let y = r;
    let z = r;
}
